chore: fix alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ededed;
+  --background: var(--tw-colors-grey-50);
   --foreground: #ededed;
 }
 
